fixes tablet css rules showing on mobile

--- a/themes/oslc-conference/static/scss/_layout/_layout.scss
+++ b/themes/oslc-conference/static/scss/_layout/_layout.scss
@@ -412,7 +412,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 770px) and (max-width: 1024px) {
   .content--section--wrapper {
     .content--section {
       .container {
